# simple-scoreboard

./: .commitlintrc.js  .gitignore  .pre-commit-config.yaml  README.md  lambda_function.py  main.tf  pyproject.toml  s3-tfstate.yaml  template.html  variables.tf
.github/workflows/: cd.yml  ci.yml
src/simple_scoreboard/: template.html
