[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# cf. tool.setuptools.package-dir section below
name = "simple-scoreboard"
description = "A serverless score-tracking web app"
version = "0.0.0"
# cf. https://www.bitecode.dev/p/relieving-your-python-packaging-pain,
# https://devguide.python.org/versions/
requires-python = ">=3.11"
# cf. https://pypi.org/classifiers/
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Other",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
# To avoid unnecessary developer overhead, only set version
# constraints to address capability, compatibility, or security
# issues, and avoid pinning specific versions if possible.
dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
]
test = [
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.package-data]
simple_scoreboard = [
    "template.html",
]

[tool.setuptools.package-dir]
simple_scoreboard = "src/simple_scoreboard"
